PA2/seal.output
Nonterminals useless in grammar

   constant
   constants
   exprs
   stmtBlocks


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl
    3          | decl_list decl

    4 decl: variableDecl
    5     | callDecl

    6 variableDecl: VAR variable ';'

    7 variableDecls: variableDecl
    8              | variableDecls variableDecl

    9 variable: OBJECTID TYPEID

   10 variables: variable
   11          | variables ',' variable
   12          | %empty

   13 callDecl: FUNC OBJECTID '(' variables ')' TYPEID stmtBlock

   14 call: OBJECTID '(' actuals ')'

   15 stmt: expr ';'
   16     | ifStmt
   17     | whileStmt
   18     | forStmt
   19     | returnStmt
   20     | continueStmt
   21     | breakStmt
   22     | stmtBlock

   23 ifStmt: IF expr stmtBlock
   24       | IF expr stmtBlock ELSE stmtBlock

   25 whileStmt: WHILE expr stmtBlock

   26 forStmt: FOR expr ';' expr ';' expr stmtBlock
   27        | FOR ';' expr ';' expr stmtBlock
   28        | FOR ';' ';' expr stmtBlock
   29        | FOR ';' ';' stmtBlock
   30        | FOR ';' expr ';' stmtBlock
   31        | FOR expr ';' expr ';' stmtBlock
   32        | FOR expr ';' ';' expr stmtBlock
   33        | FOR expr ';' ';' stmtBlock

   34 returnStmt: RETURN expr ';'
   35           | RETURN ';'

   36 continueStmt: CONTINUE ';'

   37 breakStmt: BREAK ';'

   38 stmts: stmt
   39      | stmts stmt

   40 stmtBlock: '{' variableDecls stmts '}'
   41          | '{' stmts '}'
   42          | '{' '}'
   43          | '{' variableDecls '}'

   44 actual: expr

   45 actuals: actual
   46        | actuals ',' actual
   47        | %empty

   48 leftval: OBJECTID

   49 expr: leftval '=' expr
   50     | leftval
   51     | CONST_INT
   52     | CONST_FLOAT
   53     | CONST_BOOL
   54     | CONST_STRING
   55     | call
   56     | '(' expr ')'
   57     | expr '+' expr
   58     | expr '-' expr
   59     | expr '*' expr
   60     | expr '/' expr
   61     | '-' expr
   62     | expr '<' expr
   63     | expr LE expr
   64     | expr EQUAL expr
   65     | expr NE expr
   66     | expr GE expr
   67     | expr '>' expr
   68     | expr AND expr
   69     | expr OR expr
   70     | expr '^' expr
   71     | '!' expr
   72     | '~' CONST_INT
   73     | CONST_INT '&' CONST_INT
   74     | CONST_INT '|' CONST_INT
   75     | expr '%' expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 71
'%' (37) 75
'&' (38) 73
'(' (40) 13 14 56
')' (41) 13 14 56
'*' (42) 59
'+' (43) 57
',' (44) 11 46
'-' (45) 58 61
'/' (47) 60
';' (59) 6 15 26 27 28 29 30 31 32 33 34 35 36 37
'<' (60) 62
'=' (61) 49
'>' (62) 67
'^' (94) 70
'{' (123) 40 41 42 43
'|' (124) 74
'}' (125) 40 41 42 43
'~' (126) 72
error (256)
IF (258) 23 24
ELSE (260) 24
WHILE (261) 25
FOR (262) 26 27 28 29 30 31 32 33
BREAK (263) 37
CONTINUE (264) 36
FUNC (265) 13
RETURN (266) 34 35
CONST_BOOL (267) 53
CONST_INT (268) 51 72 73 74
CONST_STRING (269) 54
CONST_FLOAT (270) 52
VAR (271) 6
AND (274) 68
OR (275) 69
EQUAL (276) 64
NE (277) 65
GE (278) 66
LE (279) 63
OBJECTID (284) 9 13 14 48
TYPEID (285) 9 13
UMINUS (287)


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1, on right: 0
decl_list (46)
    on left: 2 3, on right: 1 3
decl (47)
    on left: 4 5, on right: 2 3
variableDecl (48)
    on left: 6, on right: 4 7 8
variableDecls (49)
    on left: 7 8, on right: 8 40 43
variable (50)
    on left: 9, on right: 6 10 11
variables (51)
    on left: 10 11 12, on right: 11 13
callDecl (52)
    on left: 13, on right: 5
call (53)
    on left: 14, on right: 55
stmt (54)
    on left: 15 16 17 18 19 20 21 22, on right: 38 39
ifStmt (55)
    on left: 23 24, on right: 16
whileStmt (56)
    on left: 25, on right: 17
forStmt (57)
    on left: 26 27 28 29 30 31 32 33, on right: 18
returnStmt (58)
    on left: 34 35, on right: 19
continueStmt (59)
    on left: 36, on right: 20
breakStmt (60)
    on left: 37, on right: 21
stmts (61)
    on left: 38 39, on right: 39 40 41
stmtBlock (62)
    on left: 40 41 42 43, on right: 13 22 23 24 25 26 27 28 29 30 31
    32 33
actual (63)
    on left: 44, on right: 45 46
actuals (64)
    on left: 45 46 47, on right: 14 46
leftval (65)
    on left: 48, on right: 49 50
expr (66)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69 70 71 72 73 74 75, on right: 15 23 24 25 26 27 28 30 31
    32 33 34 44 49 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
    75


State 0

    0 $accept: . program $end

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    program       go to state 3
    decl_list     go to state 4
    decl          go to state 5
    variableDecl  go to state 6
    callDecl      go to state 7


State 1

   13 callDecl: FUNC . OBJECTID '(' variables ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 8


State 2

    6 variableDecl: VAR . variable ';'

    OBJECTID  shift, and go to state 9

    variable  go to state 10


State 3

    0 $accept: program . $end

    $end  shift, and go to state 11


State 4

    1 program: decl_list .
    3 decl_list: decl_list . decl

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    $default  reduce using rule 1 (program)

    decl          go to state 12
    variableDecl  go to state 6
    callDecl      go to state 7


State 5

    2 decl_list: decl .

    $default  reduce using rule 2 (decl_list)


State 6

    4 decl: variableDecl .

    $default  reduce using rule 4 (decl)


State 7

    5 decl: callDecl .

    $default  reduce using rule 5 (decl)


State 8

   13 callDecl: FUNC OBJECTID . '(' variables ')' TYPEID stmtBlock

    '('  shift, and go to state 13


State 9

    9 variable: OBJECTID . TYPEID

    TYPEID  shift, and go to state 14


State 10

    6 variableDecl: VAR variable . ';'

    ';'  shift, and go to state 15


State 11

    0 $accept: program $end .

    $default  accept


State 12

    3 decl_list: decl_list decl .

    $default  reduce using rule 3 (decl_list)


State 13

   13 callDecl: FUNC OBJECTID '(' . variables ')' TYPEID stmtBlock

    OBJECTID  shift, and go to state 9

    $default  reduce using rule 12 (variables)

    variable   go to state 16
    variables  go to state 17


State 14

    9 variable: OBJECTID TYPEID .

    $default  reduce using rule 9 (variable)


State 15

    6 variableDecl: VAR variable ';' .

    $default  reduce using rule 6 (variableDecl)


State 16

   10 variables: variable .

    $default  reduce using rule 10 (variables)


State 17

   11 variables: variables . ',' variable
   13 callDecl: FUNC OBJECTID '(' variables . ')' TYPEID stmtBlock

    ','  shift, and go to state 18
    ')'  shift, and go to state 19


State 18

   11 variables: variables ',' . variable

    OBJECTID  shift, and go to state 9

    variable  go to state 20


State 19

   13 callDecl: FUNC OBJECTID '(' variables ')' . TYPEID stmtBlock

    TYPEID  shift, and go to state 21


State 20

   11 variables: variables ',' variable .

    $default  reduce using rule 11 (variables)


State 21

   13 callDecl: FUNC OBJECTID '(' variables ')' TYPEID . stmtBlock

    '{'  shift, and go to state 22

    stmtBlock  go to state 23


State 22

   40 stmtBlock: '{' . variableDecls stmts '}'
   41          | '{' . stmts '}'
   42          | '{' . '}'
   43          | '{' . variableDecls '}'

    IF            shift, and go to state 24
    WHILE         shift, and go to state 25
    FOR           shift, and go to state 26
    BREAK         shift, and go to state 27
    CONTINUE      shift, and go to state 28
    RETURN        shift, and go to state 29
    VAR           shift, and go to state 2
    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '('           shift, and go to state 37
    '{'           shift, and go to state 22
    '}'           shift, and go to state 38
    '~'           shift, and go to state 39

    variableDecl   go to state 40
    variableDecls  go to state 41
    call           go to state 42
    stmt           go to state 43
    ifStmt         go to state 44
    whileStmt      go to state 45
    forStmt        go to state 46
    returnStmt     go to state 47
    continueStmt   go to state 48
    breakStmt      go to state 49
    stmts          go to state 50
    stmtBlock      go to state 51
    leftval        go to state 52
    expr           go to state 53


State 23

   13 callDecl: FUNC OBJECTID '(' variables ')' TYPEID stmtBlock .

    $default  reduce using rule 13 (callDecl)


State 24

   23 ifStmt: IF . expr stmtBlock
   24       | IF . expr stmtBlock ELSE stmtBlock

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '('           shift, and go to state 37
    '~'           shift, and go to state 39

    call     go to state 42
    leftval  go to state 52
    expr     go to state 54


State 25

   25 whileStmt: WHILE . expr stmtBlock

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '('           shift, and go to state 37
    '~'           shift, and go to state 39

    call     go to state 42
    leftval  go to state 52
    expr     go to state 55


State 26

   26 forStmt: FOR . expr ';' expr ';' expr stmtBlock
   27        | FOR . ';' expr ';' expr stmtBlock
   28        | FOR . ';' ';' expr stmtBlock
   29        | FOR . ';' ';' stmtBlock
   30        | FOR . ';' expr ';' stmtBlock
   31        | FOR . expr ';' expr ';' stmtBlock
   32        | FOR . expr ';' ';' expr stmtBlock
   33        | FOR . expr ';' ';' stmtBlock

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    ';'           shift, and go to state 56
    '('           shift, and go to state 37
    '~'           shift, and go to state 39

    call     go to state 42
    leftval  go to state 52
    expr     go to state 57


State 27

   37 breakStmt: BREAK . ';'

    ';'  shift, and go to state 58


State 28

   36 continueStmt: CONTINUE . ';'

    ';'  shift, and go to state 59


State 29

   34 returnStmt: RETURN . expr ';'
   35           | RETURN . ';'

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    ';'           shift, and go to state 60
    '('           shift, and go to state 37
    '~'           shift, and go to state 39

    call     go to state 42
    leftval  go to state 52
    expr     go to state 61


State 30

   53 expr: CONST_BOOL .

    $default  reduce using rule 53 (expr)


State 31

   51 expr: CONST_INT .
   73     | CONST_INT . '&' CONST_INT
   74     | CONST_INT . '|' CONST_INT

    '&'  shift, and go to state 62
    '|'  shift, and go to state 63

    $default  reduce using rule 51 (expr)


State 32

   54 expr: CONST_STRING .

    $default  reduce using rule 54 (expr)


State 33

   52 expr: CONST_FLOAT .

    $default  reduce using rule 52 (expr)


State 34

   14 call: OBJECTID . '(' actuals ')'
   48 leftval: OBJECTID .

    '('  shift, and go to state 64

    $default  reduce using rule 48 (leftval)


State 35

   61 expr: '-' . expr

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '('           shift, and go to state 37
    '~'           shift, and go to state 39

    call     go to state 42
    leftval  go to state 52
    expr     go to state 65


State 36

   71 expr: '!' . expr

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '('           shift, and go to state 37
    '~'           shift, and go to state 39

    call     go to state 42
    leftval  go to state 52
    expr     go to state 66


State 37

   56 expr: '(' . expr ')'

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '('           shift, and go to state 37
    '~'           shift, and go to state 39

    call     go to state 42
    leftval  go to state 52
    expr     go to state 67


State 38

   42 stmtBlock: '{' '}' .

    $default  reduce using rule 42 (stmtBlock)


State 39

   72 expr: '~' . CONST_INT

    CONST_INT  shift, and go to state 68


State 40

    7 variableDecls: variableDecl .

    $default  reduce using rule 7 (variableDecls)


State 41

    8 variableDecls: variableDecls . variableDecl
   40 stmtBlock: '{' variableDecls . stmts '}'
   43          | '{' variableDecls . '}'

    IF            shift, and go to state 24
    WHILE         shift, and go to state 25
    FOR           shift, and go to state 26
    BREAK         shift, and go to state 27
    CONTINUE      shift, and go to state 28
    RETURN        shift, and go to state 29
    VAR           shift, and go to state 2
    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '('           shift, and go to state 37
    '{'           shift, and go to state 22
    '}'           shift, and go to state 69
    '~'           shift, and go to state 39

    variableDecl  go to state 70
    call          go to state 42
    stmt          go to state 43
    ifStmt        go to state 44
    whileStmt     go to state 45
    forStmt       go to state 46
    returnStmt    go to state 47
    continueStmt  go to state 48
    breakStmt     go to state 49
    stmts         go to state 71
    stmtBlock     go to state 51
    leftval       go to state 52
    expr          go to state 53


State 42

   55 expr: call .

    $default  reduce using rule 55 (expr)


State 43

   38 stmts: stmt .

    $default  reduce using rule 38 (stmts)


State 44

   16 stmt: ifStmt .

    $default  reduce using rule 16 (stmt)


State 45

   17 stmt: whileStmt .

    $default  reduce using rule 17 (stmt)


State 46

   18 stmt: forStmt .

    $default  reduce using rule 18 (stmt)


State 47

   19 stmt: returnStmt .

    $default  reduce using rule 19 (stmt)


State 48

   20 stmt: continueStmt .

    $default  reduce using rule 20 (stmt)


State 49

   21 stmt: breakStmt .

    $default  reduce using rule 21 (stmt)


State 50

   39 stmts: stmts . stmt
   41 stmtBlock: '{' stmts . '}'

    IF            shift, and go to state 24
    WHILE         shift, and go to state 25
    FOR           shift, and go to state 26
    BREAK         shift, and go to state 27
    CONTINUE      shift, and go to state 28
    RETURN        shift, and go to state 29
    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    '('           shift, and go to state 37
    '{'           shift, and go to state 22
    '}'           shift, and go to state 72
    '~'           shift, and go to state 39

    call          go to state 42
    stmt          go to state 73
    ifStmt        go to state 44
    whileStmt     go to state 45
    forStmt       go to state 46
    returnStmt    go to state 47
    continueStmt  go to state 48
    breakStmt     go to state 49
    stmtBlock     go to state 51
    leftval       go to state 52
    expr          go to state 53


State 51

   22 stmt: stmtBlock .

    $default  reduce using rule 22 (stmt)


State 52

   49 expr: leftval . '=' expr
   50     | leftval .

    '='  shift, and go to state 74

    $default  reduce using rule 50 (expr)


State 53

   15 stmt: expr . ';'
   57 expr: expr . '+' expr
   58     | expr . '-' expr
   59     | expr . '*' expr
   60     | expr . '/' expr
   62     | expr . '<' expr
   63     | expr . LE expr
   64     | expr . EQUAL expr
   65     | expr . NE expr
   66     | expr . GE expr
   67     | expr . '>' expr
   68     | expr . AND expr
   69     | expr . OR expr
   70     | expr . '^' expr
   75     | expr . '%' expr

    AND    shift, and go to state 75
    OR     shift, and go to state 76
    EQUAL  shift, and go to state 77
    NE     shift, and go to state 78
    GE     shift, and go to state 79
    LE     shift, and go to state 80
    '<'    shift, and go to state 81
    '>'    shift, and go to state 82
    '+'    shift, and go to state 83
    '-'    shift, and go to state 84
    '*'    shift, and go to state 85
    '/'    shift, and go to state 86
    '%'    shift, and go to state 87
    '^'    shift, and go to state 88
    ';'    shift, and go to state 89


State 54

   23 ifStmt: IF expr . stmtBlock
   24       | IF expr . stmtBlock ELSE stmtBlock
   57 expr: expr . '+' expr
   58     | expr . '-' expr
   59     | expr . '*' expr
   60     | expr . '/' expr
   62     | expr . '<' expr
   63     | expr . LE expr
   64     | expr . EQUAL expr
   65     | expr . NE expr
   66     | expr . GE expr
   67     | expr . '>' expr
   68     | expr . AND expr
   69     | expr . OR expr
   70     | expr . '^' expr
   75     | expr . '%' expr

    AND    shift, and go to state 75
    OR     shift, and go to state 76
    EQUAL  shift, and go to state 77
    NE     shift, and go to state 78
    GE     shift, and go to state 79
    LE     shift, and go to state 80
    '<'    shift, and go to state 81
    '>'    shift, and go to state 82
    '+'    shift, and go to state 83
    '-'    shift, and go to state 84
    '*'    shift, and go to state 85
    '/'    shift, and go to state 86
    '%'    shift, and go to state 87
    '^'    shift, and go to state 88
    '{'    shift, and go to state 22

    stmtBlock  go to state 90


State 55

   25 whileStmt: WHILE expr . stmtBlock
   57 expr: expr . '+' expr
   58     | expr . '-' expr
   59     | expr . '*' expr
   60     | expr . '/' expr
   62     | expr . '<' expr
   63     | expr . LE expr
   64     | expr . EQUAL expr
   65     | expr . NE expr
   66     | expr . GE expr
   67     | expr . '>' expr
   68     | expr . AND expr
   69     | expr . OR expr
   70     | expr . '^' expr
   75     | expr . '%' expr

    AND    shift, and go to state 75
    OR     shift, and go to state 76
    EQUAL  shift, and go to state 77
    NE     shift, and go to state 78
    GE     shift, and go to state 79
    LE     shift, and go to state 80
    '<'    shift, and go to state 81
    '>'    shift, and go to state 82
    '+'    shift, and go to state 83
    '-'    shift, and go to state 84
    '*'    shift, and go to state 85
    '/'    shift, and go to state 86
    '%'    shift, and go to state 87
    '^'    shift, and go to state 88
    '{'    shift, and go to state 22

    stmtBlock  go to state 91


State 56

   27 forStmt: FOR ';' . expr ';' expr stmtBlock
   28        | FOR ';' . ';' expr stmtBlock
   29        | FOR ';' . ';' stmtBlock
   30        | FOR ';' . expr ';' stmtBlock

    CONST_BOOL    shift, and go to state 30
    CONST_INT     shift, and go to state 31
    CONST_STRING  shift, and go to state 32
    CONST_FLOAT   shift, and go to state 33
    OBJECTID      shift, and go to state 34
    '-'           shift, and go to state 35
    '!'           shift, and go to state 36
    ';'           shift, and go to state 92
    '('           shift, and go to state 37
    '~'           shift, and go to state 39

    call     go to state 42
    leftval  go to state 52
    expr     go to state 93


State 57

   26 forStmt: FOR expr . ';' expr ';' expr stmtBlock
   31        | FOR expr . ';' expr ';' stmtBlock
   32        | FOR expr . ';' ';' expr stmtBlock
   33        | FOR expr . ';' ';' stmtBlock
   57 expr: expr . '+' expr
   58     | expr . '-' expr
   59     | expr . '*' expr
   60     | expr . '/' expr
   62     | expr . '<' expr
   63     | expr . LE expr
   64     | expr . EQUAL expr
   65     | expr . NE expr
   66     | expr . GE expr
   67     | expr . '>' expr
   68     | expr . AND expr
   69     | expr . OR expr
   70     | expr . '^' expr
   75     | expr . '%' expr
